// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Should render - ok 1`] = `
<div>
  <ForwardRef(IconButton)
    aria-haspopup="true"
    aria-label="Options"
    color="primary"
    onClick={[Function]}
  >
    <Memo(ForwardRef(DehazeIcon)) />
  </ForwardRef(IconButton)>
  <Menu
    anchorEl={null}
    onClose={[Function]}
    open={false}
    options={
      Array [
        Object {
          "label": "Archive",
          "onClick": [MockFunction],
        },
      ]
    }
    style={
      Object {
        "maxHeight": 216,
        "width": 200,
      }
    }
  />
</div>
`;

exports[`Options Should render - with action that has disabled truthy - ok 1`] = `
<div>
  <ForwardRef(IconButton)
    aria-haspopup="true"
    aria-label="Options"
    color="primary"
    onClick={[Function]}
  >
    <Memo(ForwardRef(DehazeIcon)) />
  </ForwardRef(IconButton)>
  <Menu
    anchorEl={null}
    onClose={[Function]}
    open={false}
    options={
      Array [
        Object {
          "disabled": true,
          "label": "Archive",
          "onClick": [MockFunction],
        },
      ]
    }
    style={
      Object {
        "maxHeight": 216,
        "width": 200,
      }
    }
  />
</div>
`;
